--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </li>
                 <li class="place">
                     <h3 class="place__title">Алтай</h3>
-                    <img src="/images/place-altai.jpg" target="_blank" alt="Фото" class="place__image">
+                    <img src="./images/place-altai.jpg" target="_blank" alt="Фото" class="place__image">
                     <div class="place__url">
                         <h4 class="place__url-heading">URL</h4>
                         <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__url-link">Facebook</a>
