--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             </ul>
         </header>
         <section class="lead">
-            <h1 class="lead__title">Путешествия по&nbspРоссии</h1>
-            <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей,&nbspа&nbspздесь.</h1>
+            <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+            <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей,&nbsp;а&nbsp;здесь.</h2>
             <img class="lead__map" alt="Карта" src="./images/lead-polka.jpg">
             <p class="lead__caption">ваша полка — верхняя</p>
         </section>
         <section class="intro">
-            <h3 class="intro__title">Чего мы там не&nbspвидели?</h3>
+            <h3 class="intro__title">Чего мы там не&nbsp;видели?</h3>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="list">
                 <li class="list__item">Часовых поясов 11</li>
@@ -63,10 +63,10 @@
                 </li>
                 <li class="place">
                     <h3 class="place__title">Кольский</h3>
-                    <img src="./images/place-kolsky.jpg" target="_blank" alt="Фото" class="place__image">
+                    <img src="./images/place-kolsky.jpg" alt="Фото" class="place__image">
                     <div class="place__url">
                         <h4 class="place__url-heading">URL</h4>
-                        <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__url-link">National Geographic</a>
+                        <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="place__url-link">National Geographic</a>
                     </div>
                     <div class="place__description">
                         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -77,10 +77,10 @@
                 </li>
                 <li class="place">
                     <h3 class="place__title">Алтай</h3>
-                    <img src="./images/place-altai.jpg" target="_blank" alt="Фото" class="place__image">
+                    <img src="./images/place-altai.jpg" alt="Фото" class="place__image">
                     <div class="place__url">
                         <h4 class="place__url-heading">URL</h4>
-                        <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__url-link">Facebook</a>
+                        <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="place__url-link">Facebook</a>
                     </div>
                     <div class="place__description">
                         <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
@@ -104,10 +104,10 @@
                 </li>
                 <li class="place">
                     <h3 class="place__title">Карелия</h3>
-                    <img src="./images/place-karelia.jpg" target="_blank" alt="Фото" class="place__image">
+                    <img src="./images/place-karelia.jpg" alt="Фото" class="place__image">
                     <div class="place__url">
                         <h4 class="place__url-heading">URL</h4>
-                        <a href="http://vodlozero.ru" class="place__url-link">http://vodlozero.ru/</a>
+                        <a href="http://vodlozero.ru" target="_blank" class="place__url-link">http://vodlozero.ru/</a>
                     </div>
                     <div class="place__description">
                         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
@@ -120,7 +120,7 @@
         <section class="cover">
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
                 <img src="./images/cover-trains.jpg" alt="Фото" class="cover__image">
-                <h3 class="cover__title">До Байкала «на&nbspсобаках»</h3>
+                <h3 class="cover__title">До Байкала «на&nbsp;собаках»</h3>
                 <h4 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h4>
             </a>
         </section>
