--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header class="header">
             <img class="header__logo" alt="Логотип" src="./images/header-logo.svg">
             <ul class="header__lang-links">
-                <li><a href="#" class="header__lang-link_lang_ru">Ru</a></li>
-                <li><a href="#" class="header__lang-link_lang_en">En</a></li>
+                <li><a href="#" class="header__link_lang_ru">Ru</a></li>
+                <li><a href="#" class="header__link_lang_en">En</a></li>
             </ul>
         </header>
         <section class="lead">
