--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header class="header">
             <img class="header__logo" alt="Логотип" src="./images/header-logo.svg">
             <ul class="header__lang-links">
-                <li><a href="#" class="header__lang_ru">Ru</a></li>
-                <li><a href="#" class="header__lang_en">En</a></li>
+                <li><a href="#" class="header__lang header__lang_selected">Ru</a></li>
+                <li><a href="#" class="header__lang">En</a></li>
             </ul>
         </header>
         <section class="lead">
@@ -50,7 +50,7 @@
         <section class="places">
             <ul class="container">
                 <li class="place">
-                    <h3 class="place__title">Куршская коса</h3>
+                    <h3 class="place__title">Курская коса</h3>
                     <img src="./images/place-kosa.jpg" alt="Фото" class="place__image">
                     <div class="place__url">
                         <h4 class="place__url-heading">URL</h4>
