--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#" class="header__lang">En</a></li>
             </ul>
         </header>
-        <div class="main">
+        <main class="main">
             <section class="lead">
                 <h1 class="lead__title">Путешествия по&nbsp;России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей,&nbsp;а&nbsp;здесь.</p>
@@ -125,7 +125,7 @@
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
                 </a>
             </section>
-        </div>
+        </main>
         <footer class="footer">
             <nav class="footer__nav">
                 <ul class="footer__list">
