--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <section class="places">
                 <ul class="places__container">
                     <li class="place">
-                        <h2 class="place__title">Курская коса</h2>
+                        <h2 class="place__title">Куршская коса</h2>
                         <img src="./images/place-kosa.jpg" alt="Фото" class="place__image">
                         <div class="place__url">
                             <h3 class="place__url-heading">URL</h3>
